Hemos creado una barra de desplazamiento, para que al ir creando nuevas promociones y acuerdos, puedas ir desplazandote hacia abajo

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,8 @@
 /*Estilos para Expedientes*/
 
-.expedient_number{
-    background-color: black;
-    size: 100000px;
+.promotion-container {
+    border: 1px solid #ddd;
+    padding: 10px;
+    max-height: 300px; /* Ajusta esta altura según tus necesidades */
+    overflow-y: auto; /* Habilita la barra de desplazamiento vertical */
 }
