--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,15 @@
 /*Estilos para Expedientes*/
 
-.promotion-container {
+.promotion_container {
     border: 1px solid #ddd;
     padding: 10px;
-    max-height: 300px; /* Ajusta esta altura según tus necesidades */
+    max-height: 350px; /* Ajusta esta altura según tus necesidades */
+    overflow-y: auto; /* Habilita la barra de desplazamiento vertical */
+}
+
+.files_container{
+    border: 1px solid #ddd;
+    padding: 10px;
+    max-height: 350px; /* Ajusta esta altura según tus necesidades */
     overflow-y: auto; /* Habilita la barra de desplazamiento vertical */
 }
