Agregando sección de Observations a el formulario de expediente, commit antes de migracion para modificar la tabla para aceptar nullables

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,3 +13,10 @@
     max-height: 350px; /* Ajusta esta altura según tus necesidades */
     overflow-y: auto; /* Habilita la barra de desplazamiento vertical */
 }
+
+.observations_container {
+    border: 1px solid #ddd;
+    padding: 10px;
+    max-height: 170px; /* Ajusta esta altura según tus necesidades */
+    overflow-y: auto; /* Habilita la barra de desplazamiento vertical */
+}
